fix(popup): remove scrollbar on map

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -218,7 +218,7 @@ app-canimap-menu-mobile {
 /* OL POPUP */
 .ol-popup {
   position: absolute;
-  visibility: hidden;
+  display: none;
   background-color: rgba(0,0,0,0.4);
   -webkit-filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
   filter: drop-shadow(0 1px 4px rgba(0,0,0,0.2));
